@@ -490,6 +490,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Limburgish (li)
 * Lingala (ln)
 * Lithuanian (lt)
+* Maltese (mt)
+* Maori (mi)
 * Norwegian (no)
 * Occitan (oc)
 * Old Church Slavonic (cu)
